<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ЗооБуквы</string>

    <!--Строки в интерфейсе-->
    <string name="color_text">Цвет</string>
    <string name="points_text">Счет</string>
    <string name="move_text">Ход</string>
    <string name="players_text">Игроки</string>
    <string name="username_default">Игрок</string>
    <string name="username_user1">Игрок 1</string>
    <string name="username_user2">Игрок 2</string>
    <string name="username_computer">Компьютер</string>

    <!--Фрейм с настройками игры-->
    <string name="main_menu_fragment_game_mode_header_text">Режим игры</string>
    <string name="main_menu_fragment_game_cards_header_text">Наборы карточек</string>
    <string name="main_menu_fragment_play_game_text_button">Играть</string>
    <string name="main_menu_fragment_add_player_text">Добавить игрока</string>
    <string name="main_menu_fragment_open_rules_text">Изучить правила</string>

    <!-- Универсальные слова-->
    <string name="space">" "</string>
    <string name="choose">✓</string>
    <string name="ok">OK</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">"Отмена"</string>
    <string name="save">"Сохранить"</string>

    <!--Фразы в главном меню -->
    <string name="main_menu_fragment_no_card_selected">Выбери набор карточек</string>
    <string name="main_menu_fragment_no_player_selected">Выбери, кто будет играть</string>
    <string name="main_menu_fragment_the_name_field_is_empty">Введи имя игрока</string>
    <string name="main_menu_fragment_a_player_with_the_same_name_already_exists">Игрок \"%s\" уже существует</string>
    <string name="main_menu_fragment_no_internet_connection">Нет подключения к Интернету</string>
    <string name="main_menu_fragment_delete_player">Удалить игрока?</string>
    <string name="main_menu_fragment_new_player">Игрок %d</string>
    <string name="main_menu_fragment_no_server_connection">Загрузка аватарок временно недоступна</string>
    <string name="game_view_model_max_players">Превышено максимальное количество игроков</string>

    <!--Режим озвучивания букв/звуков -->
    <string name="voice_acting_status_letter">Режим \"БУКВЫ\"</string>
    <string name="voice_acting_status_sound">Режим \"ЗВУКИ\"</string>
    <string name="voice_acting_status_off">Режимы отключены</string>

    <!--Экран с результатами-->
    <string name="game_end_text">Игра завершена</string>
    <string name="game_time_text">Время игры</string>

    <!--Экран игры-->
    <string name="end_game_question_text">Закончить игру?</string>
    <string name="next_player_move_text">Ход следующего игрока</string>
    <string name="press_to_continue_text">Нажми, чтобы продолжить</string>
    <string name="word_guessed_text">Слово отгадано</string>
    <string name="walk_computer_text">Ходит компьютер</string>

    <!--Смена ходов-->
    <string name="game_view_model_text_invalid_letters_multiplayer">"Ходит "</string>
    <string name="game_view_model_text_invalid_letters_single_player"> </string>
    <string name="game_view_model_text_guessed_word_multiplayer">"Ходит "</string>
    <string name="game_view_model_text_guessed_word_single_player"> </string>
    <string name="game_view_model_default_text_for_screen_dimming"> </string>

    <!--Уровни-->
    <string name="learner">Ученик</string>
    <string name="expert">Эксперт</string>
    <string name="master">Мастер</string>
    <string name="genius">Гений</string>
    <string name="hero">Герой</string>
    <string name="legend">Легенда</string>

    <string name="about_app" tools:ignore="TypographyDashes">Разработка:\nDev4Rev–Team\n2023 - 2024</string>
    <string name="number_in_game_cards">%1$d/%2$d</string>
    <string name="title_best_time">Лучшее время</string>
    <string name="title_new_best_time">✨Лучшее время✨</string>


</resources>