<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/next_word"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4009FF00"
    android:clickable="true"
    android:visibility="invisible">

    <TextView
        android:id="@+id/next_word_guessed_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/word_guessed_text"
        android:textColor="#63000000"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toTopOf="@+id/next_word_tap_to_screen_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002" />

    <TextView
        android:id="@+id/next_word_move_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/next_player_move_text"
        android:textColor="#63000000"
        android:textSize="@dimen/text_big"
        app:layout_constraintBottom_toTopOf="@+id/next_word_tap_to_screen_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_word_guessed_text_view"
        app:layout_constraintVertical_bias="0.06999999" />

    <TextView
        android:id="@+id/next_word_tap_to_screen_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/press_to_continue_text"
        android:textColor="#63000000"
        android:textSize="@dimen/text_medium_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>