<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D0E1FB"
    tools:context=".presentation.main_menu.MainMenuFragment"
    >


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_main_menu_guideline_sector_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />

    <TextView
        android:id="@+id/fragment_main_menu_text_view_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="42sp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_main_menu_guideline_sector_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/fragment_main_menu_text_view_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/players_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_main_menu_guideline_sector_header" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_main_menu_recycler_view_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_main_menu_button_add_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_main_menu_guideline_sector_header">


    </androidx.recyclerview.widget.RecyclerView>


    <Button
        android:id="@+id/fragment_main_menu_button_add_player"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="6dp"
        android:text="@string/main_menu_fragment_add_player_text"
        app:layout_constraintBottom_toTopOf="@+id/fragment_main_menu_guideline_sector_recycle_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_main_menu_recycler_view_players" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_main_menu_guideline_sector_recycle_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <TextView
        android:id="@+id/fragment_main_menu_text_view_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/main_menu_fragment_game_cards_header_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_main_menu_guideline_sector_recycle_view" />

    <ToggleButton
        android:id="@+id/fragment_main_menu_toggle_button_blue"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/color_card_blue"
        android:textColor="@color/white"
        android:textOff="@string/space"
        android:textOn="@string/choose"
        app:layout_constraintBottom_toTopOf="@+id/fragment_main_menu_guideline_sector_game_cards"
        app:layout_constraintEnd_toStartOf="@+id/fragment_main_menu_toggle_button_violet"
        app:layout_constraintStart_toEndOf="@+id/fragment_main_menu_toggle_button_green"
        app:layout_constraintTop_toTopOf="@+id/fragment_main_menu_guideline_sector_recycle_view" />

    <ToggleButton
        android:id="@+id/fragment_main_menu_toggle_button_orange"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/color_card_orange"
        android:checked="true"
        android:textColor="@color/white"
        android:textOff="@string/space"
        android:textOn="@string/choose"
        app:layout_constraintBottom_toTopOf="@+id/fragment_main_menu_guideline_sector_game_cards"
        app:layout_constraintEnd_toStartOf="@+id/fragment_main_menu_toggle_button_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_main_menu_guideline_sector_recycle_view" />

    <ToggleButton
        android:id="@+id/fragment_main_menu_toggle_button_green"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/color_card_green"
        android:textColor="@color/white"
        android:textOff="@string/space"
        android:textOn="@string/choose"
        app:layout_constraintBottom_toTopOf="@+id/fragment_main_menu_guideline_sector_game_cards"
        app:layout_constraintEnd_toStartOf="@+id/fragment_main_menu_toggle_button_blue"
        app:layout_constraintStart_toEndOf="@+id/fragment_main_menu_toggle_button_orange"
        app:layout_constraintTop_toTopOf="@+id/fragment_main_menu_guideline_sector_recycle_view" />

    <ToggleButton
        android:id="@+id/fragment_main_menu_toggle_button_violet"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/color_card_violet"
        android:textColor="@color/white"
        android:textOff="@string/space"
        android:textOn="@string/choose"
        app:layout_constraintBottom_toTopOf="@+id/fragment_main_menu_guideline_sector_game_cards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment_main_menu_toggle_button_blue"
        app:layout_constraintTop_toTopOf="@+id/fragment_main_menu_guideline_sector_recycle_view" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_main_menu_guideline_sector_game_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="149dp" />


    <Button
        android:id="@+id/fragment_main_menu_button_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/main_menu_fragment_open_rules_text"
        android:textColor="@color/black"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_main_menu_button_play" />

    <Button
        android:id="@+id/fragment_main_menu_button_play"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#445D79"
        app:cornerRadius="6dp"
        android:text="@string/main_menu_fragment_play_game_text_button"
        app:layout_constraintBottom_toTopOf="@+id/fragment_main_menu_button_rules"
        app:layout_constraintEnd_toEndOf="@+id/fragment_main_menu_button_rules"
        app:layout_constraintStart_toStartOf="@+id/fragment_main_menu_button_rules"
        app:layout_constraintTop_toTopOf="@+id/fragment_main_menu_guideline_sector_game_cards" />


</androidx.constraintlayout.widget.ConstraintLayout>