<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player_constraint_layout_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/margin_small">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/player_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/main_menu_card_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/edit_player_card_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_player_card_layout"
            android:layout_margin="@dimen/margin_default">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/player_name_text_input_view"
                android:layout_width="@dimen/auto_layout"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_max="@dimen/max_width_text_view"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginEnd="44dp"
                android:gravity="center"
                android:hint="@string/username_default"
                android:inputType="text"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="?app_text_color_lvl2"
                android:textSize="@dimen/text_medium_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/avatar"
                style="@style/Avatar"
                android:layout_marginStart="@dimen/margin_medium"
                android:backgroundTint="@color/color_green_pastel"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/player_name_text_input_view"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/player_avatar_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_avatar_image"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/avatar_chicken"
                    tools:ignore="ImageContrastCheck" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_image_button"
                style="@style/Button.Tiny.Dark"
                android:layout_width="@dimen/auto_layout"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_max="@dimen/max_width_button"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_medium"
                android:backgroundTint="@color/color_violet_pastel"
                android:text="@string/ok"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancel_image_button"
                app:layout_constraintTop_toBottomOf="@+id/player_name_text_input_view"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_image_button"
                style="@style/Button.Tiny.Dark"
                android:layout_width="@dimen/auto_layout"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_max="@dimen/max_width_button"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_default"
                android:backgroundTint="@color/color_orange_pastel"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/save_image_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/player_name_text_input_view"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/delete_button"
        android:layout_width="@dimen/width_small_button"
        android:layout_height="@dimen/height_small_button"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/corner_radius_small_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/transparent"
        tools:backgroundTint="@color/white">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/delete_button_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:scaleType="centerCrop"
            android:tint="@color/secondary_color"
            app:srcCompat="@drawable/baseline_delete_24" />
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>